--- a/CSS/style.css
+++ b/CSS/style.css
@@ -236,8 +236,8 @@
     text-align: center;
     padding: 5px 0px;
     margin: 10px 10px;
-    width: 180px;
-    height: 80px;
+    width: 180px !important;
+    height: 80px !important;
     cursor: pointer;
     transition: transform .4s ease;
     display: flex;
